# cfl-img-resizer

./: Cargo.toml  README.md  package.json  wrangler.toml
.github/workflows/: deploy.yaml
scripts/gen_token/: go.mod  main.go
src/: lib.rs
